<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1DADA7"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_menu_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/curved_button_template"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/avatar_button_template"
                    android:src="@drawable/avatars"
                    android:paddingBottom="10dp"
                    android:contentDescription="@string/players_avatar_content_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:id="@+id/scoring_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@id/img"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/img2"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/star_shadow"
                            android:contentDescription="@string/score_count_desc" />

                        <TextView
                            android:id="@+id/main_menu_score_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="5dp"
                            android:textColor="#FFFF"
                            android:textSize="20sp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/trophy_locked"
                            android:contentDescription="@string/trophies_count_desc" />

                        <TextView
                            android:id="@+id/main_menu_achievement_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="5dp"
                            android:textColor="#FFFF"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/musicImageView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/score_count_desc"
                        android:src="@drawable/music_on"
                        android:layout_margin="5dp"
                        />
                    <ImageView
                        android:id="@+id/soundImageView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/sound_on"
                        android:layout_margin="5dp"
                        />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/main_menu_username_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:textColor="#FFFF"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/main_menu_play_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/curved_button_template"
        android:text="@string/main_menu_play_button"
        android:textColor="#FFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/main_menu_trophies_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_menu_profile_button" />

    <Button
        android:id="@+id/main_menu_trophies_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/curved_button_template"
        android:text="@string/main_menu_trophies_button"
        android:textColor="#FFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_rankings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_menu_play_button" />

    <Button
        android:id="@+id/main_menu_rankings_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/curved_button_template"
        android:text="@string/main_menu_rankings_button"
        android:textColor="#FFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/main_menu_options_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_menu_trophies_button" />

    <Button
        android:id="@+id/main_menu_options_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/curved_button_template"
        android:text="@string/main_menu_options_button"
        android:textColor="#FFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_menu_rankings_button" />
</android.support.constraint.ConstraintLayout>