<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1DADA7"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/result_top_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/result_image_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/results_back_button"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:background="@drawable/header_button_template"
                android:contentDescription="@string/home_button"
                android:src="@drawable/home"
                android:textColor="#FFFF"
                android:textSize="40sp"
                android:gravity="center">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/home_button"
                    android:textAlignment="center"
                    android:src="@drawable/home" />

            </LinearLayout>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/result_header"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/header_button_template"
                android:text="@string/results_title"
                android:textColor="#FFFF"
                android:textSize="40sp" />
        </android.support.v7.widget.LinearLayoutCompat>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:id="@+id/result_image_layout">


        <ImageView
            android:id="@+id/result_image_taken"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/result_image_taken" />

        <LinearLayout
            android:id="@+id/result_progress_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/curved_button_template"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/result_progress"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/result_status_text_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_done_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/result_done_text_view"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"/>
            </LinearLayout>

            <Button
                android:id="@+id/result_menu_button"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/result_main_menu"
                android:background="@drawable/curved_button_template"
                android:textColor="#FFFF"
                android:textSize="32sp"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

